# AeroOptimizer

./: .gitignore  CMakeLists.txt
src/: AeroOptimizer.cpp  AeroOptimizer.h  CMakeLists.txt  LinearAlgebra.cpp  LinearAlgebra.h  NewtonsMethod.cpp  NewtonsMethod.h  Typedefs.h
src/Aerodynamics/: Aerofoil.cpp  Aerofoil.h  Aircraft.cpp  Aircraft.h  PointMass.h  Wing.cpp  Wing.h
src/Optimization/: NewtonsMethod.cpp  NewtonsMethod.h
